# matura-2025

./: CMakeLists.txt  README.md
results/: example0_0.txt
src/: main.cpp
tests/: sample_test.cpp
tests/expected/: README.md
tests/expected/z2-1/: z2-1.cpp  z2-1.sh
zadania/01-wstep/: README.md
